force-app/main/default/objects/OpportunityTimeOutSettings__mdt/OpportunityTimeOutSettings__mdt.object-meta.xml
<CustomObject>
    <description>This setting is used to define the number of days after which an Opportunity gets Timed-Out (stage moves from Sales Closed towards Closed Lost). This setting is program-specific.</description>
    <label>Opportunity Time-Out Setting</label>
    <pluralLabel>Opportunity Time-Out Settings</pluralLabel>
</CustomObject>