force-app/main/default/objects/OpportunityTimeOutSettings__mdt/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>This field is used to indicate the Product to which the Time-Out setting belongs.</description>
    <label>Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APP</fullName>
                <default>true</default>
                <label>APP</label>
            </value>
            <value>
                <fullName>ILS</fullName>
            </value>
            <value>
                <fullName>LSP</fullName>
            </value>
            <value>
                <fullName>SCH</fullName>
            </value>
            <value>
                <fullName>MULTI</fullName>
            </value>
            <value>
                <fullName>LS</fullName>
            </value>
            <value>
                <fullName>HSY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>