force-app/main/default/objects/OpportunityTimeOutSettings__mdt/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>This field is used to indicate the Program to which the Time-Out setting belongs.</description>
    <label>Program</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ILSU</fullName>
                <default>true</default>
                <label>ILSU</label>
            </value>
            <value>
                <fullName>ILSH</fullName>
            </value>
            <value>
                <fullName>LT</fullName>
            </value>
            <value>
                <fullName>AY</fullName>
            </value>
            <value>
                <fullName>AYP</fullName>
            </value>
            <value>
                <fullName>MLY</fullName>
            </value>
            <value>
                <fullName>ILSP</fullName>
            </value>
            <value>
                <fullName>MULTI</fullName>
            </value>
            <value>
                <fullName>PRW</fullName>
            </value>
            <value>
                <fullName>EXC</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>MLYP</fullName>
            </value>
            <value>
                <fullName>ILS</fullName>
            </value>
            <value>
                <fullName>ILC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>