force-app/main/default/objects/OpportunityTimeOutSettings__mdt/fields/TimeOutSettingDays__c.field-meta.xml
<CustomField>
    <fullName>TimeOutSettingDays__c</fullName>
    <description>This field is used to define the number of days after which the Opportunity should Time-Out.</description>
    <label>Time-Out Setting (days)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>